src/objects/Nomination_Attachment__c.object
<CustomObject>
    <description>Object for categorising Nomination attachments, Relationship with Cases and Attachments objects</description>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>Field for storing related attachment Id. Used when we create a link to the attachment via the Nomination Attachment record</description>
        <label>Attachment Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Type__c</fullName>
        <description>The category which the attachment belongs to, set by the form.</description>
        <label>Attachment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Supporting letter</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attachment_Url__c</fullName>
        <description>A link tot he associated attachment for a Nomination Attachment record</description>
        <formula>HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; + Attachment_Id__c, &apos;View&apos;, &apos;_blank&apos;)</formula>
        <label>Attachment Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomination__c</fullName>
        <description>Nomination the attachment belongs to.</description>
        <label>Nomination</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Nomination Attachments</relationshipLabel>
        <relationshipName>Nomination_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Nomination Attachment</label>
    <nameField>
        <label>Attachment name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nomination Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>